# example-cpp-project

./: CMakeLists.txt  main.cpp
Includes/: first.hpp  second.hpp  streamlib.h
Source/: first.cpp  second.cpp  streamlib.cpp
tests/: test.cpp
